[article-page] mod scss * spacing order action bar items * position fixed for notification

--- a/design/scss/hedi-scss/components/common/_notfications.scss
+++ b/design/scss/hedi-scss/components/common/_notfications.scss
@@ -1,7 +1,7 @@
 .hedi--notification {
   &__toast {
     &--absolute {
-      position: absolute;
+      position: fixed;
       right: 50%;
       top: 3rem;
       transform: translate(50%);
